--- a/pages/More/Wiki.css
+++ b/pages/More/Wiki.css
@@ -130,6 +130,12 @@ body {
 .sidebar-nav a:hover {
     color: var(--primary-light);
 }
+
+.sidebar-nav .active{
+    color:white;
+    font-family:bold;
+}
+
 .sidebar-footer {
     padding: 15px 20px;
     border-top: 1px solid var(--glass-border);
