--- a/pages/More/Wiki.css
+++ b/pages/More/Wiki.css
@@ -131,7 +131,7 @@ body {
     color: var(--primary-light);
 }
 
-.sidebar-nav .active{
+.sidebar-nav a:active{
     color:white;
     font-family:bold;
 }
